--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     
     <h1>Very Informative</h1>
     
-        <p>
-            <a href= "http://www.royalroadl.com/table-of-content/">The whole story right here.</a>
+        <p>The whole story right
+            <a href= "http://www.royalroadl.com/table-of-content/"> here</a>.
           </p>
           <p>How to make and sell grass porridge like Weed.</p>
         <p>
