--- a/jack.html
+++ b/jack.html
@@ -5,11 +5,11 @@
     <body> The jack, also known as the Jack of all Trades. You are a reknowned craftsman, creating only top quality work. <br>
         You teleport into an open field, filled with tons of monsters and materials. What do you do?
 <br> <br>
-Begin the hunt to gather materials. <a href="fight">Hunt for loot.</a>
+Begin the hunt to gather materials. <a href="fight.html">Hunt for loot.</a>
     <br><br>
-Avoid the monsters and look for the materials to craft items. <a href="gather">Gather the materials.</a> 
+Avoid the monsters and look for the materials to craft items. <a href="gather.html">Gather the materials.</a> 
         <br><br>
- Don't do anything because its scary and realize that you're not in the right place. <a href="afk">AFK</a>
+ Don't do anything because its scary and realize that you're not in the right place. Who becomes a crafter anyways? <br> <a href="afk.html">AFK</a>
 
     
     
