--- a/Potato.html
+++ b/Potato.html
@@ -3,9 +3,9 @@
     <title>What to do?</title>
         </head>
  <body>
-            Choices and Decisions
+            
         <br><br>
-            Welcome to the game. There are 4 cards on a table. You must play the role of the card you pick, so...pick a card, any card. (A standard RPG Game)
+            Welcome to the a magic world. There are 4 cards on a table. You must play the role of the card you pick, so...pick a card, any card. (A standard RPG Game)
           <br><br>
        There is the <a href="king.html"> King of Hearts.</a> <br><br>
         There is the <a href="jack.html"> Jack of Diamonds.</a> <br><br>
