--- a/afk.html
+++ b/afk.html
@@ -2,7 +2,7 @@
 <head> <title>AFK </title>
 </head>
 Well since you decided to not do anything... You were useless and did not fulfill your role. You serve no purpose to the game.<br><br>
-    You are dead. Afking is bad. And you're an afker. So you were exterminated, who knows how. 
+You have died.
 <br><br> Game Over
 <br><br><br><br>
 
