--- a/jack.html
+++ b/jack.html
@@ -5,7 +5,7 @@
     <body> The jack, also known as the Jack of all Trades. You are a reknowned craftsman, creating only top quality work. <br>
         You teleport into an open field, filled with tons of monsters and materials. What do you do?
 <br> <br>
-Begin the hunt to gather materials. <a href="fight.html">Hunt for loot.</a>
+Hunt monsters for materials. <a href="fight.html">Get the loot.</a>
     <br><br>
 Avoid the monsters and look for the materials to craft items. <a href="gather.html">Gather the materials.</a> 
         <br><br>
