Need to add pics, but done

--- a/fight.html
+++ b/fight.html
@@ -2,7 +2,7 @@
 <head> <title>Fight and Loot</title>
 </head>
 <body>
-Why would you try to fight monsters? You're a crafter, not  a fighter. Monsters are scary.
+Why would you try to fight monsters? You're a crafter, not  a fighter. Monsters are scary, and you get killed.
 <br><br>
 Game Over.
 <br><br><br><br>
