--- a/ruins.html
+++ b/ruins.html
@@ -2,7 +2,7 @@
 <head> <title>The Ruins</title>
 </head>
 <body>
-When you arrive at the ruins, there is  nothing there. A slight pain occurs in your abdomen. You look down, and theres a sword sticking out there. One of the villagers resented you, and you were assassinated.
+When you arrive at the ruins, there is  nothing there. A slight pain occurs in your abdomen. You look down, and theres a sword sticking out. One of the villagers resented you, and you were assassinated. Your blind faith becane your downfall.
 <br><br>
 Game Over.
 <br><br><br><br>
