--- a/shoreline.html
+++ b/shoreline.html
@@ -6,7 +6,7 @@ When you arrive, there is a small group of people standing by a ship with a cert
 <br><br>
 The pirates accepted your presence, and over time you rose through the ranks to become captain. You lead expeditions across the world and gathered numerous treasures. 
 <br><br>
-A light appears and surround you, and you are teleported out and back into the comforts of your home.<br><br>
+A light appears and surrounds you, and you are teleported out and back into the comforts of your home.<br><br>
 You have won!
 <br><br><br><br>
 
