--- a/plants.html
+++ b/plants.html
@@ -6,7 +6,7 @@ The plants are plentiful here, and there is much to gather. You see some curious
 <br><br>
 A certain green and purple mushroom that doesn't look harmful at all. <a href="shroom.html">Mushrooms</a>
 <br><br>
-A slightly trampled fern, it doesn't look very safe. <a href="fern.html">Take it anways.</a>
+A slightly trampled fern, it doesn't look very safe, possibly even poisonous. <a href="fern.html">Take it anyways.</a>
 <br><br>
 
 
